Updated html link forcss
Link updated

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<a href = "https://www.amazon.com"> Lets try a link! </a>
+<head>
+	<link rel="stylesheet" type="text/css" href="mystyles.css">
+</head>
 <body>
+	<a href = "https://www.amazon.com"> Lets try a link! </a>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
