Updated head text html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<p> Welcome to my page!</p>
 	<link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 <body>
