updating more html
Added some text other than yellow world

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 <body>
-	<a href = "https://www.amazon.com"> Lets try a link! </a>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<a href = "https://www.amazon.com"> first link to amazon! </a>
+<h1>Welcome Everyone!</h1>
+<p>My name is josh, and over the next few weeks i will be building this page up. Hopefully i will be learning a bunch of html and css along the way! More content coming soon!</p>
 </body>
 </html>
