--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 	<a href = "https://www.amazon.com"> first link to amazon! </a>
 <h4>Welcome Everyone!</h1>
 <p>My name is josh, and over the next few weeks i will be building this page up. Hopefully i will be learning a bunch of html and css along the way! More content coming soon!</p>
+<div id="mySidenav" class="sidenav">
+	<a href="https://jhanf.github.io.">Home</a>
+</div>
 </body>
 </html>
