Exploring sidebar properties

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>My name is josh, and over the next few weeks i will be building this page up. Hopefully i will be learning a bunch of html and css along the way! More content coming soon!</p>
 <div id="mySidenav" class="sidenav">
 	<a href="https://jhanf.github.io.">Home</a>
+	<a href = "https://www.amazon.com">Amazon</a>
 </div>
 </body>
 </html>
