--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<p> Welcome to my page!</p>
 	<link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 <body>
-	<a href = "https://www.amazon.com"> first link to amazon! </a>
+	
+	<div id="mytopbar" class="topbar">
+		<p> something</p>
+	</div>
 <h4>Welcome Everyone!</h1>
 <p>My name is josh, and over the next few weeks i will be building this page up. Hopefully i will be learning a bunch of html and css along the way! More content coming soon!</p>
 <div id="mySidenav" class="sidenav">
