--- a/index.html
+++ b/index.html
@@ -1,135 +1,37 @@
+<!DOCTYPE html>
+<html>
 <head>
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="mystyles.css">
 	
-	
-	<link rel="stylesheet" href="_styles/simple-donut.css" type="text/css">
-
 </head>
-
-
-<div id="indexjumbo" class="jumbotron container-fluid">
-<div class="container">
-    <h1>Braking The Cycle</h1>
-    <p class="lead">Building Bikes, Rebuilding Lives</p>
-	</div>
-</div>
-
-
-<div id="mission-divider">
-    <h1>Our Mission</h1>
-</div>
-
-<div class="container">
-<div class="row" style="padding-bottom:3em">
-<div class="col-md-12">
-<h2 style="text-align:center;">Fighting Recidivism</h2>
-<div style="border-bottom:1px solid #b4b9c1; margin-bottom: 45px;"></div>
-</div>
-
-
-<div class="col-md-8">
-<p style="text-align:center; margin-left:25%; font-size:25px; padding-top:75px;">Just 5 years after leaving prison 77% of men are arrested again. WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS</p>
-</div>
-<div class="col-md-4">
-<div id="all-men" class="donut-size-large">
-	  <div class="pie-wrapper">
-	    <span class="label">
-	      <span class="num">75</span><span class="smaller">%</span>
-	    </span>
-	    <div class="pie">
-	      <div class="left-side half-circle"></div>
-	      <div class="right-side half-circle"></div>
-	    </div>
-	    <div class="shadow"></div>
-	  </div>
-	</div>
-</div>
-</div>
-
-<div style="border-bottom:1px solid #b4b9c1; margin-bottom: 45px;"></div>
-
-<div id="stats" class="row">
-<div class="col-md-4">
-
-<div id="black-men" class="donut-size">
-	  <div class="pie-wrapper">
-	    <span class="label">
-	      <span class="num">81</span><span class="smaller">%</span>
-	    </span>
-	    <div class="pie">
-	      <div class="left-side half-circle"></div>
-	      <div class="right-side half-circle"></div>
-	    </div>
-	    <div class="shadow"></div>
-	  </div>
-	  <h4 style="text-align:center;">of black men</h4>
+<body>
+	<div id="mytopbar" class="topbar">
+		<p> Joshua Hanf - Junior full stack developer in training</p>
 	</div>
 	
-</div>
-<div class="col-md-4">
-
-<div id="hispanic-men" class="donut-size">
-	  <div class="pie-wrapper">
-	    <span class="label">
-	      <span class="num">75</span><span class="smaller">%</span>
-	    </span>
-	    <div class="pie">
-	      <div class="left-side half-circle"></div>
-	      <div class="right-side half-circle"></div>
-	    </div>
-	    <div class="shadow"></div>
-	  </div>
-	</div>
-	<h4 style="text-align:center;">of hispanic men</h4>
-</div>
-<div class="col-md-4">
-
-<div id="white-men" class="donut-size">
-	  <div class="pie-wrapper">
-	    <span class="label">
-	      <span class="num">73</span><span class="smaller">%</span>
-	    </span>
-	    <div class="pie">
-	      <div class="left-side half-circle"></div>
-	      <div class="right-side half-circle"></div>
-	    </div>
-	    <div class="shadow"></div>
-	  </div>
-	  <h4 style="text-align:center;">of white men</h4>
-	</div>
 	
-</div>
-</div>
-<div style="border-bottom:1px solid #b4b9c1; margin-bottom: 45px;"></div>
-</div>
+<h4>Welcome Everyone!</h1>
+<p>February 20th, 2017 <br/><br/>
+	As I begin this foray into the world of technology and development, I think this would be a good time to say hello to the world in my own special way. It's currently week six here at tech elevator, i showed up 6 hours early to go over initializing a database structure using 1st, 2nd and 3rd normal forms, something i've never had to even consider before, but still fascinating (and time consuming) nonetheless. After completing said work, and doing a quick review over the Java capstone, i figured i'd take some time to kickstart my website, maybe tell anyone who may stumble here a little bit about myself. <br/><br/>
 
-<div id="mission-divider">
-    <h1></h1>
-</div>
+	At 30 years old, i feel both very lucky and very humbled about finally discovering where i belong in this world. Lucky because I'm certain I still have a very fulfilling and fascinating future ahead of me as i help pave the roads of tomorrow, and humbled by all the lessons i've had to learn to arrive here. Like metal to the magnet, no matter where I went and what I did, i still felt the pull. At last it was finally time for me to own up to my potential.  <br/><br/>
 
-<div class="container">
-<div id="redirect-section" class="row">
-    <div class="col-md-4">
-        <h2>Our Story</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Product</h2>
-        <p>Were selling bikes made by hand by men who desperately need a second chance.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Want to Help?</h2>
-        <p>If you want to donate your time or money let us know, were accepting all the help we can get.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
-</div>
+	Do you recall those scholastic book fairs that would travel from school to school? I was never really too fond of them really. Poetry, arts guides, picture books, literary classics, romance, all equally boring in my childhood. However, this one time in elementary school i was walking through the little setup, and the caption "cook food with the sun" caught my eye. I like food...but what is all this sun talk about? So i purchased this strange fold up solar cooking set. I took this set, fetched some cheese and crackers, followed the few simple steps to build my solar over, and watched as the mid-summer sun hastily melted cheese. I was astonished. I didn't understand the significance of this beautiful sharp cheddar moment until years later, but the impact has been very real.<br/><br/>
 
-<script src="_scripts/jquery-3.1.1.slim.min.js"></script>
-<script src="_scripts/simple-donut-jquery.js"></script>
-<script src="_scripts/init-javascript.js"> </script>
+	What came from that very moment was needing to understand why. What melted the cheese? Energy. How? Photons. Why does it work better in summer? Earth's orbit and tilt decrease the direct path of the photons, thus dispersing the same energy over a larger area. Etc. this is where technology took hold of me. Soon i was self studying residential photovoltaic systems and industrial scaled reflective collection methods. What are the limits of of efficiency? What are monocrystalline better than poly? Do stacked thin films decrease black body absorption? <br/><br/>
+
+	Next came wind turbines, geothermal, hydro-generated. Then the next big question hit me. Storage! Compressed hydrogen for overnight needs, bigger batteries, tighter tolerances, selectively chosen distribution curves based on the usage. Things were certainly getting exciting in my mind. Around this time, a small startup makes an electric car based on the lotus frame, more of of a proof of concept than a practical sports car, but the tesla roadster woke me up. My curiosity was suddenly more than a hobby. It was the future.<br/><br/>
+
+	I scrambled to enroll at the local community college for the closest relevant field that could get me designing electro-mechanical components and programming. I finished my associate's in electronics engineering and took the first position offered to me, repairing medical equipment. Don'd get me wrong, the work done in the biomed world is very significant to quality healthcare. If nothing else, i feel proud knowing those 4 years, every piece i touched couldn't have been in better condition given my options. But no matter how much i tried to learn, no matter how fast i climbed, it was never more than a maintenance role. In 4 years, I went from fixing broken wheels on the stretchers, to being capable and certified to fully disassemble and rebuild imaging systems from the ground up, and with all that knowledge, i was still unable to provide real solutions. I became and overqualified maintenance man to put bandaids on damaged equipment. So much for mesh analysis!<br/><br/>
+
+	This is how I ended up at tech elevator. After tens years in technician roles, i'm ready to be more than the tool, i'm ready to make the tools. In my free time, i design inventions and projects that i print out on 3d printers, i dream about designing the applications that humans will interface with in the future. Home automation, virtual reality, self driving cars, smart home energy systems, the future of banking and budgeting, voice recognition...it all is screaming out to me, begging me to dive in. From prototyping the future of automation to designing smart apps that lets users take control of their lives, i'm ready to do anything it takes to make this world, in a word, awesome. <br/><br/>
+
+	And yes, that includes leaving a comfortable job for over 12 weeks and learning a plethora of programming languages and proper coding conventions. Luckily, i'm only 30! </p>
+<div id="mySidenav" class="sidenav">
+	<a href="https://jhanf.github.io.">Home</a>
+	<a href = "https://www.linkedin.com/in/joshhanf">LinkedIn</a>
+	<a href = "http://www.techelevator.com/">Tech Elevator</a>
+	<a href = "page2.html">page 2!</a>
+</div>
+</body>
+</html>
